# Learn_CMake

./: .gitignore
00_Print/: CMakeLists.txt  README.md
01_MinimalProject/: CMakeLists.txt  standalone.cpp  vst.cpp
02_SharedLibApp/: CMakeLists.txt  README.md  standalone.cpp
02_SharedLibApp/SharedCode/: CMakeLists.txt  SharedCode.cpp  SharedCode.h
